# Util

./: CMakeLists.txt  LICENSE  README.md
include/Util/: Hashing.h  LambdaVariantVisitor.h  NotNullable.h  Optional.h  StopWatch.h  Variant.h  in_place.h
include/Util/Iterator/: DereferenceIterator.h  InfixOutputIterator.h  IteratorAdaptor.h  IteratorFacade.h  IteratorRange.h  IteratorTrait.h  MapValueIterator.h  UniquePtrIterator.h
unittest/: LambdaVisitorTest.cpp  NotNullableTest.cpp  OptionalTest.cpp  StopWatchTest.cpp  VariantTest.cpp
